tests/ui/nonce_no_serialize.stderr
warning: unreachable statement
  --> tests/ui/nonce_no_serialize.rs:10:5
   |
 9 |     let nonce: cheget::crypto::EphemeralNonces = unimplemented!();
   |                                                  ---------------- any code following this expression is unreachable
10 |     let _ = serde_json::to_vec(&nonce);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unreachable statement
   |
   = note: `#[warn(unreachable_code)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `EphemeralNonces: serde::Serialize` is not satisfied
  --> tests/ui/nonce_no_serialize.rs:10:32
   |
10 |     let _ = serde_json::to_vec(&nonce);
   |             ------------------ ^^^^^^ the trait `serde_core::ser::Serialize` is not implemented for `EphemeralNonces`
   |             |
   |             required by a bound introduced by this call
   |
   = note: for local types consider adding `#[derive(serde::Serialize)]` to your `EphemeralNonces` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `serde_core::ser::Serialize`:
             &'a T
             &'a mut T
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
note: required by a bound in `to_vec`
  --> $CARGO/serde_json-$VERSION/src/ser.rs
   |
   | pub fn to_vec<T>(value: &T) -> Result<Vec<u8>>
   |        ------ required by a bound in this function
   | where
   |     T: ?Sized + Serialize,
   |                 ^^^^^^^^^ required by this bound in `to_vec`
